Fix sec-02 growing abnormally large
when zooming out, sec-02 would take up all extra space, leaving
the content inside looking tiny and out of place. This has
been fixed by making it not grow.

--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ ul {
     justify-content: center;
     align-items: center;
     gap: 32px;
-    flex: 1;
+    flex: 0 1 auto;
     flex-wrap: wrap;
 }
 
@@ -157,4 +157,8 @@ a {
     padding: 20px;
     flex: 1 0 auto;
     margin-bottom: 32px;
+}
+
+.cont_right {
+    margin: 30px 0px;
 }
